# Open-MPI-ValueIteration

./: .gitignore  CMakeLists.txt  Makefile  README.md  hostfile
blob/: example-config
cmake/: gdb.cmake  run.cmake
docs/: Doxyfile  arch.pu
include/: data.h  isend_ireceive.h  logger.h  scatter_gatherer.h  send_recv_bcast.h  sender_gatherer.h  sequential.h  timer.h  transformer.h  utils.h  value_iteration.h
scripts/: benchmark.py  convert.py  main.py
src/: data.cpp  isend_ireceive.cpp  logger.cpp  main.cpp  scatter_gatherer.cpp  send_recv_bcast.cpp  sender_gatherer.cpp  sequential.cpp  utils.cpp
tests/: test_functional.py
